--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,76 @@
-.App {
-  text-align: center;
+.App{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  grid-gap: 3px;
+  height: 100vh;
+  width: 100vw;
+  text-decoration: none;
+  margin: 2px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+p{
+  font-size: 25px;
+  padding: 0;
+  margin: 0;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.App .Intro{
+  display: flex;
+  flex-direction: column;
+  padding-left: 50px;
+  justify-content: center;
+  background-color: rgb(218,218,218);
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.App .Name{
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  text-decoration: none;
+  background-color: rgb(191,171,170);
+  color: rgb(65,50,49);
+  font-size: 30px;
 }
 
-.App-link {
-  color: #61dafb;
+.App .Name .links{
+  color: rgb(65,50,49);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.App .About{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content:center; 
+  background-color:rgb(230,28,63) ;
+  font-size: 30px;
+}
+
+.App .About .links{
+  padding-top: 50px;
+  color: black;
+}
+
+.App .What-i-do{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: rgb(65,50,49);
+  color: rgb(191,171,170);
+  font-size: 30px;
+}
+
+.App .What-i-do .links{
+  color: rgb(191,171,170); 
+  padding-top: 50px;
+}
+
+.App .links{
+  text-decoration: none;
+}
+
+.svg_icons{
+  transform: scale(5);
 }
